correction z-index header

--- a/style.css
+++ b/style.css
@@ -348,6 +348,7 @@ header{
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
+	z-index: 1;
 }
 
 .logo_patti{
